유니티, 깃 연동

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 
 /transfer/
 /.agents/
+ignore.conf
 
 # --- OS Specs ---
 .DS_Store
@@ -43,3 +44,11 @@ Thumbs.db
 brain/
 node_modules/
 .env
+
+# --- Plastic SCM ---
+/.plastic/
+
+# --- Build Artifacts ---
+*.apk
+*.aab
+*.unitypackage
